# yew-site

./: Cargo.toml  README.md  package.json  webpack.config.js
src/: app.rs  lib.rs
static/: index.html
