[package]
name = "yew-starter"
version = "0.1.0"
authors = ["gongbaodd@Inspiron_Ubuntu20 <gongbaodd@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.16.2"
wasm-bindgen = "0.2.63"

